<?xml version="1.0" encoding="utf-8"?>
<!-- @author Nicholas Ricci -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="Zoom Options">
        
	    <EditTextPreference 
	        android:key="@string/preference_key_speed_movement"
	        android:title="@string/preference_title_speed_movement"
	        android:summary="@string/preference_summary_speed_movement"
            android:inputType="number"
	        android:defaultValue="5" />
	    
	    <ListPreference 
	       android:key="@string/preference_key_zoom"
	       android:title="@string/preference_title_zoom"
	       android:summary="@string/preference_summary_zoom"
	       android:entries="@array/preference_entries_zoom"
	       android:entryValues="@array/preference_entries_values_zoom"
	       android:defaultValue="1" />

    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="Network Options">
	    
        <EditTextPreference 
            android:key="@string/preference_key_network_refresh"
            android:title="@string/preference_title_network_refresh"
            android:summary="@string/preference_summary_network_refresh"
            android:inputType="number"
            android:defaultValue="1"/>
        
    </PreferenceCategory>
    
</PreferenceScreen>
